Реализована работа со списком "Избранное":  1. добавление в список при нажатии на значок "Звезда"  2. открытие списка "Избранное" через главное меню  3. удаление из списка "Избранное" 2-мя способами:     - повторное нажатие на значок "Звезда"     - swipe в списке "Избранное"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="exit_title">Exit</string>
     <string name="negative_button">NO</string>
     <string name="positive_button">YES</string>
+    <string name="star_tag">\"Star\" tag</string>
+    <string name="favorites">Favorites</string>
 </resources>
