--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -19,4 +19,6 @@
     <string name="exit_title">Выход</string>
     <string name="negative_button">НЕТ</string>
     <string name="positive_button">ДА</string>
+    <string name="star_tag">Метка \"Звезда\"</string>
+    <string name="favorites">Избранное</string>
 </resources>
