--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -23,4 +23,5 @@
     <string name="favorites">Избранное</string>
     <string name="favorite_remove_conform">"Удалить из Избранного? "</string>
     <string name="favorites_removing_title">Удаление</string>
+    <string name="no_name_film">Фильм без названия</string>
 </resources>
