--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,12 @@
     <string name="favorite_remove_conform">Are you sure to remove from Favorites?</string>
     <string name="favorites_removing_title">Removing</string>
     <string name="no_name_film">No name film</string>
+    <string name="menu_item_home">Home</string>
+    <string name="menu_group_communicate">Communicate</string>
+    <string name="menu_item_email">Email</string>
+    <string name="menu_item_exit">Exit</string>
+    <string name="drawer_icon" translatable="false">Drawer icon</string>
+    <string name="main_menu_title" translatable="false">Main menu</string>
+    <string name="open_drawer_dsc" translatable="false">Open drwer</string>
+    <string name="close_drawer_dsc" translatable="false">Close drawer</string>
 </resources>
