--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -28,4 +28,8 @@
     <string name="menu_group_communicate">Контакты</string>
     <string name="menu_item_email">Email</string>
     <string name="menu_item_exit">Выход</string>
+    <string name="main_menu_title">Основное меню</string>
+    <string name="remove_from_favorites_msg">Фильм удален из Избранного</string>
+    <string name="add_to_favorite_msg">Фильм добавлен в Избранное</string>
+    <string name="undo_btn_title">ОТМЕНА</string>
 </resources>
