Реализована загрузка списка фильмов с сайта https://www.themoviedb.org с помощью его API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Video hits of 90s</string>
+    <string name="app_name">Movies</string>
     <string name="film_poster">Film poster</string>
     <string name="blood_sport">Blood sport</string>
     <string name="button_details">Details</string>
