--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Хиты видео-салонов 90х…</string>
+    <string name="app_name">Фильмы</string>
     <string name="film_poster">Постер</string>
     <string name="blood_sport">Кровавый спорт</string>
     <string name="button_details">Детали</string>
