--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,10 @@
     <string name="remove_from_favorites_msg">Film has removed from Favorites</string>
     <string name="add_to_favorite_msg">Film has added to Favorites</string>
     <string name="undo_btn_title">UNDO</string>
+    <string name="clear_the_cache">Clear the data</string>
+    <string name="utils">Utils</string>
+    <string name="clear_cache_confirmation">Are you sure you want to clear the data?</string>
+    <string name="works_only_with_films_msg">Works only with films list</string>
+    <string name="load_data_error_msg">"Error during load data: "</string>
+    <string name="repeat_caption">Repeat</string>
 </resources>
