Добавлена отправка напоминаний с задержкой по времени. Добавлено отображение диалогового окна при получении сообщений из Firebase

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -38,4 +38,7 @@
     <string name="works_only_with_films_msg">Работает только со списком фильмов</string>
     <string name="load_data_error_msg">"Ошибка при загрузке данных: "</string>
     <string name="repeat_caption">Повторить</string>
+    <string name="notify_caption">Напомнить</string>
+    <string name="notification_date_hint">Дата напоминания</string>
+    <string name="button_text_ok">ОК</string>
 </resources>
