Добавлена новая таблица Notifications в БД. Добавлены миграции. Реализовано добавление напоминаний в список (таблицу в БД). Реализованы функции редактирования и удаления напоминаний.

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -41,4 +41,6 @@
     <string name="notify_caption">Напомнить</string>
     <string name="notification_date_hint">Дата напоминания</string>
     <string name="button_text_ok">ОК</string>
+    <string name="notifications_title">Напоминания</string>
+    <string name="notification_removed_msg">Напоминание удалено</string>
 </resources>
